add final and static to variables in com.aelitis.azureus.core classes.  Any newly final variables that create synthetic getters are changed from private to package-private
git-svn-id: http://svn.vuze.com/public/client@43869 c2c1b7af-1477-405b-86ee-8aefd1fc4dd2